k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mandm-ingress
  namespace: mandm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: mandm.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mandm-backend
                port:
                  number: 8080

          - path: /
            pathType: Prefix
            backend:
              service:
                name: mandm-frontend
                port:
                  number: 80
